# 69

./: .gitignore  README.md  pyproject.toml
data/raw/barchart/: nmh20_intraday-1min_historical-data-download-08-13-2025.csv  nmh21_intraday-1min_historical-data-download-08-13-2025.csv  nmh22_intraday-1min_historical-data-download-08-13-2025.csv  nmh23_intraday-1min_historical-data-download-08-13-2025.csv  nmh24_intraday-1min_historical-data-download-08-13-2025.csv  nmh25_intraday-1min_historical-data-download-08-13-2025.csv  nmm20_intraday-1min_historical-data-download-08-13-2025.csv  nmm21_intraday-1min_historical-data-download-08-13-2025.csv  nmm22_intraday-1min_historical-data-download-08-13-2025.csv  nmm23_intraday-1min_historical-data-download-08-13-2025.csv  nmm24_intraday-1min_historical-data-download-08-13-2025.csv  nmm25_intraday-1min_historical-data-download-08-13-2025.csv  nmu20_intraday-1min_historical-data-download-08-13-2025.csv  nmu21_intraday-1min_historical-data-download-08-13-2025.csv  nmu22_intraday-1min_historical-data-download-08-13-2025.csv  nmu23_intraday-1min_historical-data-download-08-13-2025.csv  nmu24_intraday-1min_historical-data-download-08-13-2025.csv  nmz20_intraday-1min_historical-data-download-08-13-2025.csv  nmz21_intraday-1min_historical-data-download-08-13-2025.csv  (+3 more)
scripts/: run_leaderboard.sh  run_miner.sh  run_simscan.sh
src/data_prep/: ingest_barchart_mnq.py
src/loftai_patterns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/patterns/: __init__.py  cluster_leaderboard.py  miner.py  motif_miner.py  similar_scan.py  utils.py
